/*
 * $Id: ChangeLog,v 1.1739 2003/11/18 03:39:34 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-11-19 08:25 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/pp/ppcore.c minor fix to hb_strAtSkipStrings()

2003-11-17 19:38 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/pp/ppcore.c
    * Changed 2nd param of strotrim() to int iContext, and added logic to avoid []
      context detrermination if context is hb_pp_ParseExpression().
      This fixes a bug where spaces were removed from [...] literal strings.

    * Added logic to initialize cLastChar in strotrim() based on s_Array
      which was set by the preceding call to hb_pp_NextToken().
      This fixes a bug where result begins with a \[. This was processed as a LITERAL String
      but the #directive anchor which was retrived with the last call to hb_pp_NextToken()
      is what should be used to determine the context.

2003-11-18 01:50 UTC+0100 Francesco Saverio Giudice <info@fsgiudice.com>
  * vm\eval.c
    * changed HB_ExecFromArray() to support this new syntax with optional params
      HB_ExecFromArray( "Func" )
      HB_ExecFromArray( "Func", aParams )
      HB_ExecFromArray( @Func() )
      HB_ExecFromArray( @Func(), aParams )
      HB_ExecFromArray( bCode )
      HB_ExecFromArray( bCode, aParams )
      HB_ExecFromArray( oObject, @Method() )
      HB_ExecFromArray( oObject, "Method" )
      HB_ExecFromArray( oObject, @Method(), aArray )
      HB_ExecFromArray( oObject, "Method", aArray )
      HB_ExecFromArray( aArray )

  * tests\exec.prg
    + added new tests without params

2003-11-17 09:32 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * tests/pp.prg
    * Few corrections to recent optimization of PP_CompileLine()

  * tests/pptest.prg
    + Added few more tests
